fix: source surveys monitorings and api documentation OC:5386,5387
